[gd_scene load_steps=4 format=3 uid="uid://b3idxdufr2a8b"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_2b8xn"]
[ext_resource type="PackedScene" uid="uid://525ggaunp1sp" path="res://Scenes/options.tscn" id="2_f8lrc"]
[ext_resource type="AudioStream" uid="uid://dlcvf4re8kvl0" path="res://Music/MenuMusicDemo.mp3" id="3_fe7jd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2b8xn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -161.0
offset_right = 224.0
offset_bottom = -16.0
grow_vertical = 0

[node name="Fight" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_font_sizes/font_size = 24
text = "Fight"

[node name="Slap" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_font_sizes/font_size = 24
text = "Slap"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Slap")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="Options2" parent="." instance=ExtResource("2_f8lrc")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_right = 103.5

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fe7jd")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.74902, 1, 1)
theme_override_font_sizes/font_size = 60
text = "CS:GO!"

[connection signal="pressed" from="VBoxContainer/Fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="VBoxContainer/Slap" to="." method="_on_slap_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
